--- a/meta/main.yml
+++ b/meta/main.yml
@@ -49,6 +49,5 @@ galaxy_info:
     #       Maximum 20 tags per role.
 
 dependencies:
-  []
-  # List your role dependencies here, one per line. Be sure to remove the '[]' above,
-  # if you add dependencies to this list.
+  - src: https://github.com/infn-datacloud/ansible-role-docker.git
+    version: v2.2.0
